fix: changed to lighter contrast colors

--- a/src/Components/ContractorDetails/ContractorDetails.scss
+++ b/src/Components/ContractorDetails/ContractorDetails.scss
@@ -5,7 +5,7 @@
 }
 
 @mixin section {
-  background-color: rgb(232, 232, 232);
+  background-color: rgb(243, 243, 243);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19),
     0px 0px 3px rgba(0, 0, 0, 0.5) inset;
   border-radius: 10px;
