--- a/src/Components/Reviews/Reviews.scss
+++ b/src/Components/Reviews/Reviews.scss
@@ -16,8 +16,8 @@
     width: 80%;
     height: fit-content;
     padding: 10px;
-    background-color: rgb(244, 244, 244);
-    border: 1px solid rgb(212, 212, 212);
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3) inset;
     border-radius: 15px;
     margin-bottom: 20px;
 
@@ -40,12 +40,16 @@
           font-size: 1.31em;
         }
       }
+      &__rating {
+        padding-left: 10px;
+        width: 300px;
+      }
     }
     &__date {
       grid-area: 1 / 2 / 2 / 3;
       text-align: end;
     }
-    &__body {
+    &__content {
       grid-area: 2 / 1 / 3 / 3;
       padding: 20px;
       padding-bottom: 5px;
